--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -111,7 +111,9 @@
         <item>复制短简介</item>
         <item>复制长简介</item>
         <item>复制全部</item>
+        <item>到官方文档中查看此权限</item>
     </string-array>
+    <string name="toast_check_in_doc">权限已复制。请在打开的网页中搜索此权限。</string>
 
     <string name="permlab_accessCoarseLocation">访问大致位置信息（以网络为依据）</string>
     <string name="permdesc_accessCoarseLocation">此应用可根据网络来源（例如基站和 WLAN 网络）获取您的位置信息。您的手机必须支持并开启这些位置信息服务，此应用才能使用这些服务。</string>
